--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,38 +7,57 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/place"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.2"
             android:text="@string/nbk"
-            android:textSize="20sp">
-
-        </TextView>
+            android:textSize="20sp" />
 
         <ImageView
-            android:id="@+id/dropdown_menu"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/menu">
+            android:id="@+id/menu_icon"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="0.04"
+            android:src="@drawable/menu_icon" />
 
-        </ImageView>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5" />
 
         <ImageView
-            android:id="@+id/bell"
-            android:layout_width="30dp"
+            android:id="@+id/bell_icon"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:src="@drawable/bell">
+            android:layout_weight="0.1"
+            android:src="@drawable/bell_icon" />
 
-        </ImageView>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
